# galactic-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  ingestion.py  pyproject.toml  submission.csv
Dataset/: domande.csv
Dataset/ground_truth/: dish_mapping.json
Dataset/knowledge_base/blogpost/: blog_etere_del_gusto.html  blog_sapore_del_dune.html
Dataset/knowledge_base/misc/: Distanze.csv
data/: submission.csv
src/galactic_rag/: __init__.py  config.py  rag_pipeline.py  rag_postprocess.py  run_questions.py
src/galactic_rag/ingestion/: .env.example  __init__.py  basic_ingestion.py  docker-compose.yaml  ingestion.py
src/galactic_rag/ingestion/utils/: constant.py
